--- a/UTS3.html
+++ b/UTS3.html
@@ -92,11 +92,11 @@
             <div class="dropdown nested-dropdown">
                 <button class="dropbtn">About Us</button>
                 <div class="nested-dropdown-content">
-                    <a href="tentangrizky.html">tentang Rizky Febian</a>
-                    <a href="tentangalbum.html">tentang album</a>
+                    <a href="https://ratu0987.github.io/ratu_/tentangrizky.html">tentang Rizky Febian</a>
+                    <a href="https://ratu0987.github.io/ratu_/tentangrizky.html">tentang album</a>
             </div>
-            <a href="galleryiky.html">Gallery Rizky</a>
-           <a href="infososmed.html">informasi sosmed</a>
+            <a href="https://ratu0987.github.io/ratu_/galleryiky.html">Gallery Rizky</a>
+           <a href="https://ratu0987.github.io/ratu_/infososmed.html">informasi sosmed</a>
             
         </div>
     </div>
