--- a/galleryiky.html
+++ b/galleryiky.html
@@ -13,9 +13,9 @@
     <div class="image-button-container">
             <img id="img" src="images/jejak.jpg" style="center; width: 300px; height:300px;">
             <div class="button-group">
-            <button class="button" onclick="document.getElementById('img').src='images/aa1.jpg'">1</button>
-            <button class="button" onclick="document.getElementById('img').src='images/aa2.jpg'">2</button>
-            <button class="button" onclick="document.getElementById('img').src='images/aa3.jpg'">3</button>
+            <button class="button" onclick="document.getElementById('img').src='aa1.jpg'">1</button>
+            <button class="button" onclick="document.getElementById('img').src='aa2.jpg'">2</button>
+            <button class="button" onclick="document.getElementById('img').src='aa3.jpg'">3</button>
         </div>
     <footer>
         <p>&copy; 2024 By Ratu Khailifah </p>
