--- a/tentangrizky.html
+++ b/tentangrizky.html
@@ -22,7 +22,7 @@
             <h2>Album Terkenal:</h2><p>Jejak, Berona</p>
         </section>
         <section class="foto">
-            <img src="images/iky1.jpg" alt="Rizky Febian">
+            <img src="iky1.jpg" alt="Rizky Febian">
         </section>
     </main>
     <footer>
