--- a/galleryiky.html
+++ b/galleryiky.html
@@ -11,7 +11,7 @@
         <h2> Foto Rizky Febian</h2>
         <p>Beberapa foto dari Rizky Febian yang akan membuatmu lebih dekat dengan musiknya.</p>
     <div class="image-button-container">
-            <img id="img" src="images/jejak.jpg" style="center; width: 300px; height:300px;">
+            <img id="img" src="jejak.jpg" style="center; width: 300px; height:300px;">
             <div class="button-group">
             <button class="button" onclick="document.getElementById('img').src='aa1.jpg'">1</button>
             <button class="button" onclick="document.getElementById('img').src='aa2.jpg'">2</button>
