--- a/UTS3.html
+++ b/UTS3.html
@@ -93,7 +93,7 @@
                 <button class="dropbtn">About Us</button>
                 <div class="nested-dropdown-content">
                     <a href="https://ratu0987.github.io/ratu_/tentangrizky.html">tentang Rizky Febian</a>
-                    <a href="https://ratu0987.github.io/ratu_/tentangrizky.html">tentang album</a>
+                    <a href="https://ratu0987.github.io/ratu_/tentangalbum.html">tentang album</a>
             </div>
             <a href="https://ratu0987.github.io/ratu_/galleryiky.html">Gallery Rizky</a>
            <a href="https://ratu0987.github.io/ratu_/infososmed.html">informasi sosmed</a>
