--- a/latihan1ratu.html
+++ b/latihan1ratu.html
@@ -19,7 +19,7 @@ body	{
  	margin-left: 50px;
  }
 </style>
-<img src="images/kue coklat.jpg" width="250px" height="250px" align="right">
+<img src="cake.jpg" width="250px" height="250px" align="right">
 <p>Cake adalah salah satu hidangan penutup yang paling populer di seluruh dunia. Dengan berbagai rasa, tekstur, dan penampilan, cake mampu memikat hati banyak orang. Dari cake cokelat yang kaya hingga cake buah yang segar, setiap jenis cake memiliki karakteristik unik yang membuatnya istimewa. Selain itu, cake sering kali menjadi simbol perayaan, menemani momen-momen penting dalam hidup seperti ulang tahun, pernikahan, dan acara keluarga.<p>Dengan berkembangnya media sosial, cake kini sering kali menjadi objek kreatif yang diabadikan dan dibagikan. Tren baru dalam dekorasi cake muncul, dengan banyak orang berusaha menciptakan cake yang tidak hanya lezat tetapi juga estetis. Ini menciptakan komunitas di mana para penggemar cake saling berbagi ide dan inspirasi, menjadikan cake sebagai bagian integral dari budaya kuliner modern.</p>
 <h2><mark>daftar menu</mark></h2>
 <ul>
